fixed spacing

--- a/public/styles/test.less
+++ b/public/styles/test.less
@@ -18,4 +18,5 @@ h3{
 
 button{
   height: 100%;
+  margin-right: 5px;
 }
